// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render EN snapshot correctly 1`] = `
<div>
  <header
    class="bg-sky-800 w-full"
  >
    <nav
      class="flex"
    >
      <div
        class="flex w-full justify-between items-center"
      >
        <a
          href="https://www.linkedin.com/in/%F0%9F%92%BB-eric-salle-431664109/"
        >
          <h1
            class="pl-4 text-gray-100 font-bold text-2xl my-2 font-instagram"
          >
            Eric Salle
          </h1>
        </a>
        <button
          class="mr-4 my-4 text-gray-100 font-semibold border-2 border-color-white p-2 rounded hover:bg-white hover:text-sky-800"
        >
          EN
           - 
          🇺🇸
        </button>
      </div>
      <div
        class="hidden"
        data-testid="popin"
      >
        <div
          class="flex flex-col gap-2 md:w-1/4 bg-slate-100 py-4 px-6 rounded z-10 border-2 border-slate-200"
        >
          <div
            class="flex justify-between items-center"
          >
            <h3
              class="py-2 text-lg font-semibold text-sky-800"
            >
              Language & Country
            </h3>
            <img
              alt="Close"
              class="cursor-pointer"
              data-nimg="1"
              decoding="async"
              height="20"
              loading="lazy"
              role="img"
              src="/images/cross.svg"
              style="color: transparent;"
              title="Close"
              width="20"
            />
          </div>
          <select
            class="my-2 p-2 border-2 border-slate-300 rounded"
          >
            <option
              value="FR"
            >
              France
               - 
              🇫🇷
            </option>
            <option
              selected=""
              value="US"
            >
              USA
               - 
              🇺🇸
            </option>
            <option
              value="GB"
            >
              United Kingdom
               - 
              🇬🇧
            </option>
            <option
              value="ES"
            >
              España
               - 
              🇪🇸
            </option>
            <option
              value="LU"
            >
              Luxembourg
               - 
              🇱🇺
            </option>
            <option
              value="CH"
            >
              Suisse
               - 
              🇨🇭
            </option>
            <option
              value="BE"
            >
              Belgique
               - 
              🇧🇪
            </option>
          </select>
          <select
            class="my-2 p-2 border-2 border-slate-300 rounded"
          >
            <option
              selected=""
              value="en"
            >
              English
            </option>
            <option
              value="fr"
            >
              Français
            </option>
            <option
              value="es"
            >
              Español
            </option>
          </select>
          <button
            class="self-end rounded-lg text-sky-800 border-sky-800 hover:bg-sky-800 hover:text-white border-2 p-2"
          >
            Submit
          </button>
        </div>
        <div
          class="hidden"
          data-testid="background"
        />
      </div>
    </nav>
  </header>
</div>
`;

exports[`Header should render FR snapshot correctly 1`] = `
<div>
  <header
    class="bg-sky-800 w-full"
  >
    <nav
      class="flex"
    >
      <div
        class="flex w-full justify-between items-center"
      >
        <a
          href="https://www.linkedin.com/in/%F0%9F%92%BB-eric-salle-431664109/"
        >
          <h1
            class="pl-4 text-gray-100 font-bold text-2xl my-2 font-instagram"
          >
            Eric Salle
          </h1>
        </a>
        <button
          class="mr-4 my-4 text-gray-100 font-semibold border-2 border-color-white p-2 rounded hover:bg-white hover:text-sky-800"
        >
          FR
           - 
          🇫🇷
        </button>
      </div>
      <div
        class="hidden"
        data-testid="popin"
      >
        <div
          class="flex flex-col gap-2 md:w-1/4 bg-slate-100 py-4 px-6 rounded z-10 border-2 border-slate-200"
        >
          <div
            class="flex justify-between items-center"
          >
            <h3
              class="py-2 text-lg font-semibold text-sky-800"
            >
              Langue & Pays
            </h3>
            <img
              alt="Fermer"
              class="cursor-pointer"
              data-nimg="1"
              decoding="async"
              height="20"
              loading="lazy"
              role="img"
              src="/images/cross.svg"
              style="color: transparent;"
              title="Fermer"
              width="20"
            />
          </div>
          <select
            class="my-2 p-2 border-2 border-slate-300 rounded"
          >
            <option
              selected=""
              value="FR"
            >
              France
               - 
              🇫🇷
            </option>
            <option
              value="US"
            >
              USA
               - 
              🇺🇸
            </option>
            <option
              value="GB"
            >
              United Kingdom
               - 
              🇬🇧
            </option>
            <option
              value="ES"
            >
              España
               - 
              🇪🇸
            </option>
            <option
              value="LU"
            >
              Luxembourg
               - 
              🇱🇺
            </option>
            <option
              value="CH"
            >
              Suisse
               - 
              🇨🇭
            </option>
            <option
              value="BE"
            >
              Belgique
               - 
              🇧🇪
            </option>
          </select>
          <select
            class="my-2 p-2 border-2 border-slate-300 rounded"
          >
            <option
              value="en"
            >
              English
            </option>
            <option
              selected=""
              value="fr"
            >
              Français
            </option>
            <option
              value="es"
            >
              Español
            </option>
          </select>
          <button
            class="self-end rounded-lg text-sky-800 border-sky-800 hover:bg-sky-800 hover:text-white border-2 p-2"
          >
            Valider
          </button>
        </div>
        <div
          class="hidden"
          data-testid="background"
        />
      </div>
    </nav>
  </header>
</div>
`;
